Efmub-Ogy/src/objects/Case_Complaint__c.object
<CustomObject>
    <description>Associates a complaint code to both a Case and a Flight Leg</description>
    <fields>
        <fullName>Airport__c</fullName>
        <label>Airport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Departure</fullName>
                </value>
                <value>
                    <fullName>Arrival</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabin_Class__c</fullName>
        <label>Cabin Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Main Cabin</fullName>
                </value>
                <value>
                    <fullName>La Première</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Premium Economy</fullName>
                </value>
                <value>
                    <fullName>Comfort Plus</fullName>
                </value>
                <value>
                    <fullName>Preferred Paid Seat</fullName>
                </value>
                <value>
                    <fullName>Basic Economy</fullName>
                </value>
                <value>
                    <fullName>Economy Comfort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <inlineHelpText>The Case to which this Case Complaint is related.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Complaint Codes</relationshipLabel>
        <relationshipName>Case_Complaints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Complaint_City__c</fullName>
        <label>Complaint City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Code_L1__c</fullName>
        <formula>Complaint_Code__r.Level_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Code L1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Code_L2__c</fullName>
        <formula>Complaint_Code__r.Level_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Code L2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Code_L3__c</fullName>
        <formula>Complaint_Code__r.Level_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Code L3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active Complaint Codes can be selected.</errorMessage>
            <filterItems>
                <field>Complaint_Code__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active Complaint Codes can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Complaint_Code__c</referenceTo>
        <relationshipLabel>Case Complaints</relationshipLabel>
        <relationshipName>Case_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Details__c</fullName>
        <label>Complaint Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Location__c</fullName>
        <label>Complaint Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS Gate</fullName>
                </value>
                <value>
                    <fullName>ACS Ticket Counter</fullName>
                </value>
                <value>
                    <fullName>Inflight</fullName>
                </value>
                <value>
                    <fullName>Flight Ops</fullName>
                </value>
                <value>
                    <fullName>Baggage</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Refunds</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <formula>TEXT(Complaint_Code__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_Disability_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOT Disability Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Complaint_Code__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dot_Disability</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Complaint_Code__c</referenceTo>
        <relationshipLabel>Case Complaints (DOT Disability Code)</relationshipLabel>
        <relationshipName>DOT_Disability_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disability_Code_Other_Reason__c</fullName>
        <label>Disability Code Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Code_Value__c</fullName>
        <formula>CASE(Disability_Code__c,
&apos;Vision Impaired&apos;,0,
&apos;Hearing Impaired&apos;,1,
&apos;Vision &amp; Hearing Impaired&apos;,2,
&apos;Paraplegic&apos;,3,
&apos;Quadriplegic&apos;,4,
&apos;Other Wheelchair&apos;,5,
&apos;Oxygen&apos;,6,
&apos;Stretcher&apos;,7,
&apos;Other Disability&apos;,8,
&apos;Other Assistive Device&apos;,9,
&apos;Mentally Impaired&apos;,10,
&apos;Communicable Disease&apos;,11,
&apos;Allergies&apos;,12,
Null)</formula>
        <label>Disability Code Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disability_Code__c</fullName>
        <label>Disability Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vision Impaired</fullName>
                </value>
                <value>
                    <fullName>Hearing Impaired</fullName>
                </value>
                <value>
                    <fullName>Vision &amp; Hearing Impaired</fullName>
                </value>
                <value>
                    <fullName>Paraplegic</fullName>
                </value>
                <value>
                    <fullName>Quadriplegic</fullName>
                </value>
                <value>
                    <fullName>Other Wheelchair</fullName>
                </value>
                <value>
                    <fullName>Oxygen</fullName>
                </value>
                <value>
                    <fullName>Stretcher</fullName>
                </value>
                <value>
                    <fullName>Other Disability</fullName>
                </value>
                <value>
                    <fullName>Other Assistive Device</fullName>
                </value>
                <value>
                    <fullName>Mentally Impaired</fullName>
                </value>
                <value>
                    <fullName>Communicable Disease</fullName>
                </value>
                <value>
                    <fullName>Allergies</fullName>
                </value>
                <value>
                    <fullName>Case is greater than 45 days</fullName>
                </value>
                <value>
                    <fullName>Telephone case</fullName>
                </value>
                <value>
                    <fullName>No flight info</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disability_Group_Value__c</fullName>
        <formula>CASE(Disability_Group__c,
&apos;Refusal to Board Passenger&apos;,0,
&apos;Refusal to Board w/o Attendant&apos;,1,
&apos;Security Issues Regarding Disability&apos;,2,
&apos;Aircraft Not Accessible&apos;,3,
&apos;Airport Not Accessible&apos;,4,
&apos;Advance Notice Dispute&apos;,5,
&apos;Seating Accommodation&apos;,6,
&apos;Failure to Provide Assistance&apos;,7,
&apos;Damage to Assistive Device&apos;,8,
&apos;Storage and Delay of Assistive Device&apos;,9,
&apos;Service Animal Problem&apos;,10,
&apos;Unsatisfactory Info.&apos;,11,
&apos;Other&apos;,12,
Null)</formula>
        <label>Disability Group Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disability_Group__c</fullName>
        <label>Disability Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refusal to Board Passenger</fullName>
                </value>
                <value>
                    <fullName>Refusal to Board w/o Attendant</fullName>
                </value>
                <value>
                    <fullName>Security Issues Regarding Disability</fullName>
                </value>
                <value>
                    <fullName>Aircraft Not Accessible</fullName>
                </value>
                <value>
                    <fullName>Airport Not Accessible</fullName>
                </value>
                <value>
                    <fullName>Advance Notice Dispute</fullName>
                </value>
                <value>
                    <fullName>Seating Accommodation</fullName>
                </value>
                <value>
                    <fullName>Failure to Provide Assistance</fullName>
                </value>
                <value>
                    <fullName>Damage to Assistive Device</fullName>
                </value>
                <value>
                    <fullName>Storage and Delay of Assistive Device</fullName>
                </value>
                <value>
                    <fullName>Service Animal Problem</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory Info.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No DOT Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Flight Leg to which this Case Complaint is related.</inlineHelpText>
        <label>Flight Leg</label>
        <referenceTo>Flight_Leg__c</referenceTo>
        <relationshipLabel>Case Complaints</relationshipLabel>
        <relationshipName>Case_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operating_Carrier__c</fullName>
        <label>Cabin Class Operating Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>0K</fullName>
                </value>
                <value>
                    <fullName>0U</fullName>
                </value>
                <value>
                    <fullName>2J</fullName>
                </value>
                <value>
                    <fullName>2M</fullName>
                </value>
                <value>
                    <fullName>2T</fullName>
                </value>
                <value>
                    <fullName>2V</fullName>
                </value>
                <value>
                    <fullName>3D</fullName>
                </value>
                <value>
                    <fullName>3M</fullName>
                </value>
                <value>
                    <fullName>4J</fullName>
                </value>
                <value>
                    <fullName>4L</fullName>
                </value>
                <value>
                    <fullName>5G</fullName>
                </value>
                <value>
                    <fullName>5J</fullName>
                </value>
                <value>
                    <fullName>7H</fullName>
                </value>
                <value>
                    <fullName>8G</fullName>
                </value>
                <value>
                    <fullName>8M</fullName>
                </value>
                <value>
                    <fullName>8U</fullName>
                </value>
                <value>
                    <fullName>9B</fullName>
                </value>
                <value>
                    <fullName>9E</fullName>
                </value>
                <value>
                    <fullName>9J</fullName>
                </value>
                <value>
                    <fullName>9K</fullName>
                </value>
                <value>
                    <fullName>9L</fullName>
                </value>
                <value>
                    <fullName>9N</fullName>
                </value>
                <value>
                    <fullName>9U</fullName>
                </value>
                <value>
                    <fullName>9W</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>A7</fullName>
                </value>
                <value>
                    <fullName>A9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <label>Responsible Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Location__c</fullName>
        <label>Sub Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPT-{00000000}</displayFormat>
        <label>Case Complaint</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Complaints</pluralLabel>
    <recordTypes>
        <fullName>DOT_Complaint</fullName>
        <active>true</active>
        <label>DOT Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delta_Complaint</fullName>
        <active>true</active>
        <label>Delta Complaint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>